--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "inspirational-quotes": "^2.0.1",
     "node-cron": "^3.0.2",
     "node-thermal-printer": "^4.2.1",
     "replace-in-file": "^7.0.1"
